csye6225-infra.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: CSYE 6225 IaC Demo
Parameters:
  VPCCidrBlock:
    Description: "CIDR block for VPC"
    Type: String
    Default: "10.1.0.0/16"
  Subnet1CidrBlock:
    Type: String
    Default: "10.1.1.0/24"
  Subnet2CidrBlock:
    Type: String
    Default: "10.1.2.0/24"
  Subnet3CidrBlock:
    Type: String
    Default: "10.1.3.0/24"
  RDSSubnet1CidrBlock:
    Type: String
    Default: "10.1.4.0/24"
  RDSSubnet2CidrBlock:
    Type: String
    Default: "10.1.5.0/24"
  RDSSubnet3CidrBlock:
    Type: String
    Default: "10.1.6.0/24"
  AvailabilityZone1:
    Type: String
    Default: "us-east-1a"
  AvailabilityZone2:
    Type: String
    Default: "us-east-1b"
  AvailabilityZone3:
    Type: String
    Default: "us-east-1c"
  PublicRouteCidrBlock:
    Type: String
    Default: "0.0.0.0/0"
  AmiId:
    Type: String
    # Default: "ami-033b95fb8079dc481"
    Default: "ami-0288217a58a0f17c2"
  Environment:
    Type: String
    Default: "dev"
  DBName:
    Type: String
    Default: "csye6225"
  DBPassword:
    Type: String
    Default: "verybadpassword"
  InstanceKeyName:
    Type: String
    Default: "csye6225"
  
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidrBlock
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: 'default'
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref Subnet1CidrBlock
      AvailabilityZone: !Ref AvailabilityZone1
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref Subnet2CidrBlock
      AvailabilityZone: !Ref AvailabilityZone2
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  Subnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref Subnet3CidrBlock
      AvailabilityZone: !Ref AvailabilityZone3
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  RDSSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      MapPublicIpOnLaunch: "false"
      CidrBlock: !Ref RDSSubnet1CidrBlock
      AvailabilityZone: !Ref AvailabilityZone1
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  RDSSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      MapPublicIpOnLaunch: "false"
      CidrBlock: !Ref RDSSubnet2CidrBlock
      AvailabilityZone: !Ref AvailabilityZone2
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  RDSSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      MapPublicIpOnLaunch: "false"
      CidrBlock: !Ref RDSSubnet3CidrBlock
      AvailabilityZone: !Ref AvailabilityZone3
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: Subnet1
      RouteTableId:
        Ref: RouteTable
  Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: Subnet2
      RouteTableId:
        Ref: RouteTable
  Subnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: Subnet3
      RouteTableId:
        Ref: RouteTable
  Route:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
       RouteTableId:
         Ref: RouteTable
       DestinationCidrBlock: !Ref PublicRouteCidrBlock
       GatewayId:
         Ref: InternetGateway
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  RDSSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: RDSSubnet1
      RouteTableId:
        Ref: PrivateRouteTable
  RDSSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: RDSSubnet2
      RouteTableId:
        Ref: PrivateRouteTable
  RDSSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: RDSSubnet3
      RouteTableId:
        Ref: PrivateRouteTable
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        GroupName: application
        VpcId:
          Ref: VPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          Description: ssh
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref LBSecurityGroup
        - IpProtocol: tcp
          Description: ssh
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref LBSecurityGroup
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref LBSecurityGroup
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref LBSecurityGroup
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security group for RDS instances
        GroupName: database
        VpcId:
          Ref: VPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2SecurityGroup

  LBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security group for Load balancer to access the web
        GroupName: load balancer
        VpcId:
          Ref: VPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: ::/0
  
  ASGLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: "asg_launch_config"
      LaunchTemplateData:
        ImageId: !Ref AmiId
        InstanceType: t2.micro
        KeyName: !Ref InstanceKeyName
        IamInstanceProfile:
          Arn: !GetAtt EC2InstanceProfile.Arn
        NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          Groups: [!Ref EC2SecurityGroup]
          DeleteOnTermination: "true"
          DeviceIndex: "0"
        BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 20
            VolumeType: "gp2"
            DeleteOnTermination: true
        UserData:
          Fn::Base64: 
            !Sub |
              #!/bin/bash
              yum update -y
              mkdir -p /home/ec2-user/webservice
              echo "DB_PORT=${RDSDBInstance.Endpoint.Port}" >| /home/ec2-user/webservice/.env
              echo "DB_USER=${DBName}" >> /home/ec2-user/webservice/.env
              echo "DB_PASS=${DBPassword}" >> /home/ec2-user/webservice/.env
              echo "DB_HOST=${RDSDBInstance.Endpoint.Address}" >> /home/ec2-user/webservice/.env
              echo "DB_NAME=${DBName}" >> /home/ec2-user/webservice/.env
              echo "S3_BUCKETNAME=${S3BUCKET}" >> /home/ec2-user/webservice/.env
              systemctl restart gowebapp

  ASGWebApp:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: asg_launch_config
      AvailabilityZones:
        - !Ref AvailabilityZone1
        - !Ref AvailabilityZone2
        - !Ref AvailabilityZone3
      Cooldown: '60'
      DesiredCapacity: '1'
      HealthCheckGracePeriod: 90
      HealthCheckType: EC2
      LaunchTemplate:
        LaunchTemplateId: !Ref ASGLaunchTemplate
        Version: !GetAtt ASGLaunchTemplate.LatestVersionNumber
      MaxSize: '5'
      MinSize: '1'
      # NewInstancesProtectedFromScaleIn: true
      Tags:
        - Key: Application
          Value: WebApp
          PropagateAtLaunch: "true"
        - Key: Name
          Value: !Sub ${AWS::StackName}-asg
          PropagateAtLaunch: "true"
      TargetGroupARNs:
        - !Ref LoadBalancerTargetGroup
      VPCZoneIdentifier:
        - !Ref Subnet1
        - !Ref Subnet2
        - !Ref Subnet3

  ASGCPUScaleOutPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref ASGWebApp
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 5.0

  # ASGCPUScaleInPolicy:
  #   Type: AWS::AutoScaling::ScalingPolicy
  #   Properties:
  #     AutoScalingGroupName: !Ref ASGWebApp
  #     PolicyType: TargetTrackingScaling
  #     TargetTrackingConfiguration:
  #       PredefinedMetricSpecification:
  #         PredefinedMetricType: ASGAverageCPUUtilization
  #       TargetValue: 3.0

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn: InternetGateway
    Properties:
      IpAddressType: ipv4
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '60'
      Name: !Sub ${AWS::StackName}-load-balancer
      Scheme: internet-facing
      SecurityGroups:
        - !Ref LBSecurityGroup
      Subnets:
        - !Ref Subnet1
        - !Ref Subnet2
        - !Ref Subnet3
      Tags:
        - Key: Application
          Value: WebApp
        - Key: Name
          Value: !Sub ${AWS::StackName}-load-balancer
      Type: application

  LoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 90
      HealthCheckPath: '/healthz'
      HealthCheckPort: '8080'
      HealthCheckProtocol: 'HTTP'
      HealthCheckTimeoutSeconds: 60
      HealthyThresholdCount: 2
      IpAddressType: ipv4
      Name: !Sub ${AWS::StackName}-lb-tg
      Port: 8080
      Protocol: 'HTTP'
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-lb-tg
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '20'
      TargetType: instance
      UnhealthyThresholdCount: 2
      VpcId: !Ref VPC
  
  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref LoadBalancerTargetGroup
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP

  DNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Sub ${Environment}.olasunkanmi-olayinka.me.
      Comment: DNS name for my application load balancer
      Name: !Sub ${Environment}.olasunkanmi-olayinka.me.
      Type: A
      AliasTarget:
        DNSName: !GetAtt LoadBalancer.DNSName
        HostedZoneId: !GetAtt LoadBalancer.CanonicalHostedZoneID

  # EC2Instance: 
  #   Type: AWS::EC2::Instance
  #   Properties: 
  #     ImageId: !Ref AmiId
  #     InstanceType: t2.micro
  #     IamInstanceProfile: !Ref EC2InstanceProfile
  #     NetworkInterfaces: 
  #     - AssociatePublicIpAddress: "true"
  #       DeleteOnTermination: "true"
  #       SubnetId:
  #         Ref: Subnet1
  #       DeviceIndex: "0"
  #       GroupSet: [!Ref EC2SecurityGroup]
  #     BlockDeviceMappings: 
  #     - DeviceName: "/dev/xvda"
  #       Ebs: 
  #         VolumeType: "gp2"
  #         DeleteOnTermination: "true"
  #         VolumeSize: "20"
  #     UserData:
  #       Fn::Base64: 
  #         !Sub |
  #           #!/bin/bash
  #           yum update -y
  #           mkdir -p /home/ec2-user/webservice
  #           echo "DB_PORT=${RDSDBInstance.Endpoint.Port}" >| /home/ec2-user/webservice/.env
  #           echo "DB_USER=${DBName}" >> /home/ec2-user/webservice/.env
  #           echo "DB_PASS=${DBPassword}" >> /home/ec2-user/webservice/.env
  #           echo "DB_HOST=${RDSDBInstance.Endpoint.Address}" >> /home/ec2-user/webservice/.env
  #           echo "DB_NAME=${DBName}" >> /home/ec2-user/webservice/.env
  #           echo "S3_BUCKETNAME=${S3BUCKET}" >> /home/ec2-user/webservice/.env
  #           systemctl restart gowebapp
  S3BUCKET:
    Type: AWS::S3::Bucket
    DeletionPolicy: Delete
    Properties: 
      BucketName: !Join
      - ""
      - - !Select
          - 4
          - !Split
            - "-"
            - !Select
              - 2
              - !Split
                - "/"
                - !Ref AWS::StackId
        - "."
        - !Ref Environment
        - ".olasunkanmi-olayinka.me"
      AccessControl: Private
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      BucketEncryption:
        ServerSideEncryptionConfiguration:
        - ServerSideEncryptionByDefault:
            SSEAlgorithm: AES256
      LifecycleConfiguration:
        Rules:
        - Id: MyRule
          Status: Enabled
          Transitions:
            - TransitionInDays: 30
              StorageClass: STANDARD_IA
  RDSDBSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: "Subnet Group for RDS DB instances"
      DBSubnetGroupName: !Sub "${DBName}-subnet-group"
      SubnetIds:
      - !Ref RDSSubnet1
      - !Ref RDSSubnet2
      - !Ref RDSSubnet3
  RDSDBParameterGroup:
    Type: 'AWS::RDS::DBParameterGroup'
    Properties:
      Description: MySQL Parameter Group
      Family: mysql8.0
  RDSDBInstance:
        Type: AWS::RDS::DBInstance
        Properties:
          DBParameterGroupName: !Ref RDSDBParameterGroup
          Engine: MySQL
          EngineVersion: 8.0.27
          DBInstanceClass: db.t3.micro
          AllocatedStorage: "20"
          StorageType: "gp2"
          MultiAZ: "false"
          DBInstanceIdentifier: !Ref DBName
          MasterUsername: !Ref DBName
          MasterUserPassword: !Ref DBPassword
          DBSubnetGroupName: !Ref RDSDBSubnetGroup
          PubliclyAccessible: "false"
          DBName: !Ref DBName
          VPCSecurityGroups: [!Ref RDSSecurityGroup]
  EC2S3Policy:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyName: "WebAppS3"
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
            - "s3:PutObject"
            - "s3:GetObject"
            - "s3:DeleteObject"
            Resource:
            - !Sub "arn:aws:s3:::${S3BUCKET}"
            - !Sub "arn:aws:s3:::${S3BUCKET}/*"
      Roles:
      - !Ref EC2S3IAMRole
  EC2S3IAMRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: "EC2-CSYE6225"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: /
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: ec2-instance-profile
      Path: /
      Roles: 
      - !Ref EC2S3IAMRole

Outputs:
  VpcId:
    Description: The VPC ID
    Value: !Ref VPC
  Subnet1Id:
    Description: The Subnet 1 ID
    Value: !Ref Subnet1
  Subnet2Id:
    Description: The Subnet 2 ID
    Value: !Ref Subnet2
  Subnet3Id:
    Description: The Subnet 3 ID
    Value: !Ref Subnet3
  InternetGatewayId:
    Description: The Internet GateWay ID
    Value: !Ref InternetGateway
  RouteTableId:
    Description: The Route Table ID
    Value: !Ref RouteTable
  EC2SecurityGroupId:
    Description: The application security group ID
    Value: !Ref EC2SecurityGroup
